NetBSD Problem Report #41899

From www@NetBSD.org  Mon Aug 17 07:42:27 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 01A6F63C285
	for <gnats-bugs@gnats.netbsd.org>; Mon, 17 Aug 2009 07:42:26 +0000 (UTC)
Message-Id: <20090817074226.B796263BDF9@www.NetBSD.org>
Date: Mon, 17 Aug 2009 07:42:26 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Prototypes in Data16.
X-Send-Pr-Version: www-1.0

>Number:         41899
>Category:       xsrc
>Synopsis:       Prototypes in Data16.
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    mrg
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 17 07:45:00 +0000 2009
>Closed-Date:    Tue Jun 01 04:21:42 +0000 2010
>Last-Modified:  Tue Jun 01 04:25:01 +0000 2010
>Originator:     Henning Petersen
>Release:        
>Organization:
>Environment:
>Description:
Prototypes in Data16 is wrong.
>How-To-Repeat:

>Fix:
diff -u -r1.1.1.2 FSlibInt.c
--- libFS/dist/src/FSlibInt.c	9 Jul 2009 02:00:07 -0000	1.1.1.2
+++ libFS/dist/src/FSlibInt.c	17 Aug 2009 07:00:50 -0000
@@ -1180,7 +1180,7 @@
 }

 void
-Data16(svr, data, len)
+Data16(
     FSServer	*svr,
     short	*data,
     unsigned	 len)

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: xsrc-manager->mrg
Responsible-Changed-By: mrg@NetBSD.org
Responsible-Changed-When: Tue, 01 Jun 2010 03:11:10 +0000
Responsible-Changed-Why:
seems reasonable; will commit.


State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 01 Jun 2010 04:21:42 +0000
State-Changed-Why:
change commited. thanks.


From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41899 CVS commit: xsrc/external/mit/libFS/dist/src
Date: Tue, 1 Jun 2010 04:21:06 +0000

 Module Name:	xsrc
 Committed By:	mrg
 Date:		Tue Jun  1 04:21:06 UTC 2010

 Modified Files:
 	xsrc/external/mit/libFS/dist/src: FSlibInt.c

 Log Message:
 fix a prototype error, as per PR#41899 from Henning Petersen.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.2 -r1.2 xsrc/external/mit/libFS/dist/src/FSlibInt.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.