fix a prototype error, as per PR#41899 from Henning Petersen.