external/mit/libFS/dist/src/FSlibInt.c
@@ -1180,7 +1180,7 @@ doData16(
 }
 
 void
-Data16(svr, data, len)
+Data16(
     FSServer	*svr,
     short	*data,
     unsigned	 len)
